@@ -4,6 +4,9 @@ Change History
 1.7.13 (unreleased)
 -------------------
 
+- Fixed type definition for FieldsetStart type
+  [naro]
+
 - Depend on Products.CMFPlone instead of Plone.
   [maurits]
 
